# CASMcode_configuration

./: .cirrus.yml  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.in  LICENSE  README.md  build_requirements.txt  configure.ac  doc_requirements.txt  label_wheels.py  make_CMakeLists.py  make_Makemodule.py  pyproject.toml  setup.py  test_requirements.txt
.github/workflows/: build_wheels.yml  test-linux-build.yml  test-linux-cxx-only.yml  test-linux-dependencies.yml  test-linux.yml  test-macos-build.yml  test-macos.yml
cmake/: CASMcode_configurationConfig.cmake.in
doc/: doxygen_config
include/casm/basic_symmetry/: Group.hh  definitions.hh  subgroups.hh
include/casm/configuration/: ConfigCompare.hh  ConfigDoFIsEquivalent.hh  ConfigIsEquivalent.hh  Configuration.hh  ConfigurationSet.hh  DoFSpace.hh  DoFSpaceAxisInfo.hh  DoFSpaceCoordinate.hh  DoFSpace_functions.hh  FromStructure.hh  OrderParameter.hh  Prim.hh  PrimMagspinInfo.hh  PrimSymInfo.hh  Supercell.hh  SupercellSet.hh  SupercellSymInfo.hh  SupercellSymOp.hh  canonical_form.hh  config_space_analysis.hh  copy_configuration.hh  definitions.hh  dof_space_analysis.hh  make_simple_structure.hh  misc.hh  supercell_name.hh  version.hh
include/casm/configuration/basic_symmetry/: Group.hh  definitions.hh  subgroups.hh
include/casm/configuration/clusterography/: ClusterInvariants.hh  ClusterSpecs.hh  GenericCluster.hh  IntegralCluster.hh  IntegralClusterOrbitGenerator.hh  SubClusterCounter.hh  definitions.hh  impact_neighborhood.hh  occ_counter.hh  orbits.hh
include/casm/configuration/enumeration/: ConfigEnumAllOccupations.hh  ConfigurationFilter.hh  MakeOccEventStructures.hh  OccEventInfo.hh  background_configuration.hh  definitions.hh  filter.hh  perturbations.hh
include/casm/configuration/group/: Group.hh  definitions.hh  orbits.hh  subgroups.hh
include/casm/configuration/irreps/: IrrepDecomposition.hh  IrrepDecompositionImpl.hh  IrrepWedge.hh  SimpleOrbit.hh  SimpleOrbit_impl.hh  Symmetrizer.hh  VectorSpaceSymReport.hh  VectorSymCompare_v2.hh  definitions.hh  misc.hh  to_real.hh
include/casm/configuration/occ_events/: OccEvent.hh  OccEventCounter.hh  OccEventInvariants.hh  OccEventRep.hh  OccPosition.hh  OccSystem.hh  OccTrajectory.hh  definitions.hh  orbits.hh
include/casm/configuration/sym_info/: definitions.hh  factor_group.hh  global_dof_sym_info.hh  local_dof_sym_info.hh  occ_sym_info.hh  unitcellcoord_sym_info.hh
python/: LICENSE  README.md  SUMMARY.md  _setup.py  doc_requirements.txt  pyproject.toml  setup.py
python/doc/: README.md  about.rst  conf.py  index.rst  installation.rst  usage.rst
python/doc/_static/css/: custom.css
python/doc/_templates/: custom-class-template.rst  custom-module-template.rst
python/doc/usage/: usage.rst
python/libcasm/clusterography/: __init__.py  _methods.py
python/libcasm/configuration/: __init__.py  _methods.py  _misc.py
python/libcasm/enumerate/: _ConfigEnumAllOccupations.py  _ConfigEnumInfo.py  _ConfigEnumLocalOccupations.py  _ConfigEnumMeshGrid.py  _OccEventPrimSymInfo.py  _OccEventSupercellSymInfo.py  _ScelEnum.py  _SuperConfigEnum.py  _SuperlatticeEnum.py  __init__.py  _make_distinct_super_configurations.py  _methods.py  _point_defect_supercell_methods.py
python/libcasm/irreps/: __init__.py
python/libcasm/local_configuration/: _LocalConfiguration.py  _OccEventPrimSymInfo.py  _OccEventSupercellSymInfo.py  __init__.py  _methods.py
python/libcasm/occ_events/: __init__.py  _methods.py  _occ_event_printer.py
python/libcasm/sym_info/: __init__.py  _methods.py  _sym_group.py
python/src/: clusterography.cpp  configuration.cpp  enumerate.cpp  irreps.cpp  local_configuration.cpp  occ_events.cpp  sym_info.cpp
python/tests/clusterography/: conftest.py  test_cluster.py  test_cluster_specs.py  test_equivalents_info_from_dict.py  test_orbits.py
python/tests/configuration/: conftest.py  functions.py  test_config_space_analysis.py  test_configuration.py  test_configuration_magspin.py  test_configuration_set.py  test_configuration_with_properties.py  test_dof_space_analysis.py  test_matrix_rep.py  test_prim.py  test_prim_magspin.py  test_structure_conversions.py  test_supercell.py  test_supercell_set.py
python/tests/enumerate/: conftest.py  test_ConfigEnumAllOccupations.py  test_ConfigEnumInfo.py  test_ConfigEnumLocalOccupations.py  test_ConfigEnumMeshGrid.py  test_ScelEnum.py  test_make_all_distinct_local_perturbations.py  test_make_supercells_for_point_defects.py  test_parallel_enum.py
python/tests/irreps/: conftest.py  test_IrrepDecomposition.py  test_MatrixRepGroup.py
python/tests/occ_events/: conftest.py  test_make_canonical_prim_periodic_occevents.py  test_occ_event.py  test_occ_event_cluster_specs.py  test_occ_system.py
src/casm/configuration/: Configuration.cc  ConfigurationSet.cc  DoFSpace.cc  DoFSpaceAxisInfo.cc  DoFSpace_functions.cc  FromStructure.cc  OrderParameter.cc  Prim.cc  PrimMagspinInfo.cc  PrimSymInfo.cc  Supercell.cc  SupercellSet.cc  SupercellSymInfo.cc  SupercellSymOp.cc  UnitCellCoordRep.cc  canonical_form.cc  config_space_analysis.cc  copy_configuration.cc  dof_space_analysis.cc  make_simple_structure.cc  misc.cc  supercell_name.cc  version.cc
tests/: CMakeLists.txt  CMakeLists.txt.in
tests/unit/: testdir.cc  teststructures.hh
tests/unit/clusterography/: impact_neighborhood_test.cpp  local_orbits_test.cpp  orbits_test.cpp
tests/unit/configuration/: ConfigCompare_test.cpp  Configuration_test.cpp  DoFSpace_test.cpp  PrimSymInfo_test.cpp  Prim_test.cpp  SupercellSymOp_test.cpp  Supercell_test.cpp  canonical_form_test.cpp  config_space_analysis_test.cpp  copy_configuration_test.cpp  cyclic_subgroups_test.cpp  dof_space_analysis_test.cpp  make_simple_structure_test.cpp  supercell_name_test.cpp
tests/unit/enumeration/: MakeOccEventStructures_test.cpp  background_configuration_test.cpp  local_perturbations_test.cpp  perturbations_test.cpp
tests/unit/occ_events/: FCCBinaryOccEventCounter_test.cpp  FCCBinaryOccEvent_json_io_test.cpp  FCCDumbbellOccEventCounter_test.cpp  OccSystem_test.cpp  custom_test.cpp  orbits_test.cpp
(+89 files in other folders)
