[build-system]
requires = [
    "pip",
    "setuptools>=42",
    "scikit-build",
    "cmake>=3.20",
    "ninja",
    "pybind11~=3.0",
    "libcasm-global>=2.2.0",
    "libcasm-xtal>=2.2.0",
    "libcasm-clexulator>=2.2.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "libcasm-configuration"
version = "2.2.0"
authors = [
  { name="CASM developers", email="casm-developers@lists.engr.ucsb.edu" },
]
description = "CASM configuration comparison and enumeration"
readme = "README.md"
requires-python = ">=3.9,<3.14"
license = "LGPL-2.1-or-later"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
]
dependencies = [
  "libcasm-global>=2.2.0",
  "libcasm-xtal>=2.2.0",
  "libcasm-clexulator>=2.2.0",
  "numpy",
  "spglib",
]

[project.urls]
Homepage = "https://prisms-center.github.io/CASMcode_docs/"
Repository = "https://github.com/prisms-center/CASMcode_configuration"


[tool.ruff.lint]
select = ["NPY201", "E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["libcasm", "casm"]


[tool.cibuildwheel]
# Build for python3.9, 3.10, 3.11, 3.12, 3.13
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"

# Need libcasm dependencies at wheel repair stage
before-build = "pip install -r build_requirements.txt"

# Testing
test-requires = "pytest pytest-datadir sortedcontainers libcasm-mapping>=2.2.0"
test-command = "pytest -rsap {project}/python/tests"

[tool.cibuildwheel.macos]
# C++17
environment = { MACOSX_DEPLOYMENT_TARGET="10.15" }

repair-wheel-command = ""

[tool.cibuildwheel.linux]
# dependencies do not build for musl
skip = ["*musllinux*"]

repair-wheel-command = ""